# ai-submodule

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  GOALS.md  README.md  catalog.json  config.yaml  init.md  init.ps1  init.sh  instructions.md  mkdocs.yml  project.yaml  pytest.ini  requirements.txt
governance/engine/: README.md  __init__.py  conflict_resolver.py  containment.py  containment_hook.py  envelope.py  message_signing.py  multi_model_aggregator.py  multi_model_integration.py  naming.py  naming_data.py  network_sandbox.py  paths.py  policy_engine.py  preflight.py  pyproject.toml  sandbox_enforcer.py  security_prefilter.py  storage.py
governance/engine/api/: __init__.py  app.py  models.py  routes.py
governance/engine/api/tests/: test_api.py
governance/engine/orchestrator/: __init__.py  __main__.py  agent_context.py  agent_registry.py  approve_verification.py  audit.py  capacity.py  checkpoint.py  circuit_breaker.py  claude_code_dispatcher.py  config.py  deployment.py  dispatch_state.py  dispatch_validator.py  dispatcher.py  extension_discovery.py  lock_manager.py  model_router.py  plugins.py  runner.py  session.py  state_machine.py  step_result.py  step_runner.py  topology.py  topology_error.py  tree.py
governance/engine/policies/: cost-optimization.yaml
governance/engine/schemas/: panel-output.schema.json  run-manifest.schema.json
governance/engine/tests/: conftest.py  test_agent_context.py  test_agent_registry.py  test_agentic_protocol.py  test_approve_verification.py  test_audit.py  test_capacity.py  test_checkpoint_orchestrator.py  test_checkpoint_recovery.py  test_circuit_breaker.py  test_claude_code_dispatcher.py  test_cli.py  test_config.py  test_containment.py  test_containment_hook.py  test_context_management.py  test_deployment_phases.py  test_devops_persistent.py  test_dispatch_state.py  test_dispatch_validator.py  test_envelope.py  test_extension_discovery.py  test_governance_artifacts.py  test_installation_hardening.py  test_lock_manager.py  test_message_signing.py  test_model_router.py  test_multi_model_integration.py  test_naming.py  test_network_sandbox.py  test_persona_structure.py  test_plugins.py  test_policy_engine.py  test_policy_integration.py  test_preflight.py  test_runner.py  test_sandbox_enforcer.py  test_scenarios.py  test_schema_validation.py  test_security_prefilter.py  (+9 more)
governance/engine/tests/adversarial/: test_protocol_spoofing.py  vectors.py
governance/integrations/ado/: __init__.py  _exceptions.py  _pagination.py  _patch.py  _rate_limit.py  _types.py  auth.py  client.py  config.py  pyproject.toml  retry.py  reverse_mappers.py  reverse_sync.py
governance/integrations/ado/tests/: __init__.py  conftest.py  test_auth.py  test_bidirectional_e2e.py  test_client_classification.py  test_client_comments.py  test_client_fields.py  test_client_project.py  test_client_wiql.py  test_client_work_items.py  test_config.py  test_exceptions.py  test_httpserver.py  test_live_ado.py  test_patch.py  (+4 more)
(+768 files in other folders)
