[project]
name = "dark-factory-engine"
version = "1.0.0"
description = "Dark Factory Policy Engine — evaluate panel emissions against policy profiles"
requires-python = ">=3.9"

dependencies = [
    "jsonschema>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ado = [
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.0.0",
    "hypothesis>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=tests/naming-report.html --self-contained-html"

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.setuptools]
py-modules = ["policy_engine", "naming", "naming_data"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
