[project]
name = "dark-factory-ado"
version = "1.0.0"
description = "Azure DevOps REST API client for Dark Factory Governance"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
